*Empty MediaWiki Message*

--- a/Морго_веле_(Тумобуе).mw
+++ b/Морго_веле_(Тумобуе).mw
@@ -61,7 +61,13 @@
 }}
 '''Морго''' ({{Lang-ru|Морга}}) - эрзянь веле [[Мордовия]]со [[Тумобуе]]сэ.
 
+==Содавикс ломанть те велестэнть==
+* [[Биушкина, Мария Романовна|Мария Биушкина]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> — эрзянь сёрмадей, кель-содый, филологиянь наукань кандидат (1978).
 
-[[Category:Мордовиянь велеть|П]]
-[[Category:Тумобуень велеть|П]]
+== Лисьм.: ==
+<references />
+
+
+[[Category:Мордовиянь велеть|М]]
+[[Category:Тумобуень велеть|М]]
 [[Category:Эрзянь велеть]]
