--- a/Ташто_Кшуманця_(Покш_Игнадбуе).mw
+++ b/Ташто_Кшуманця_(Покш_Игнадбуе).mw
@@ -63,6 +63,8 @@
 ==Содавикс ломанть те велестэнть==
 * [[Мусалев, Григорий Дмитриевич|Григорий Мусалев]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> — эрзянь Инязоро, математик, [[Эрзянь келень идема вейсендявкс|А. П. Рябовонь лемсэ Эрзянь келень идема вейсендявксонть]] прявт.
 
+==Веленть эрямось==
+Эрьва [[кизэ]] ютавтневи [[Велень озкс]]<ref name="Кулят инфо">[http://www.kulyat.info/voshod-bignatovo/27_ignatovo/561-velen-ozks-2009.html Кулят инфо|| Велень озкс - 2009]{{ref-ru}}</ref>.
 == Лисьм.: ==
 <references />
 
