*Empty MediaWiki Message*

--- a/Курилова_(Рамаданбуе).mw
+++ b/Курилова_(Рамаданбуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Курилова''' ({{Lang-ru|c. Курилово}}) — эрзянь веле<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/p_Kyrilovo.htm Многоликая Мордовия: Село Курилово {{Ref-ru}}]]</ref><ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref> [[Рамаданбуе]]сэ, [[Мордовия]]со.
+'''Курилова''' ({{Lang-ru|c. Курилово}}) — эрзянь веле<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/p_Kyrilovo.htm Многоликая Мордовия: Село Курилово {{Ref-ru}}]</ref><ref name="Геопортал РГО">[http://geo13.ru/atlas/provinces/56 Геопортал РГО: ПРИРОДНОЕ И КУЛЬТУРНОЕ НАСЛЕДИЕ МУНИЦИПАЛЬНЫХ РАЙОНОВ / РОМОДАНОВСКИЙ РАЙОН{{Ref-ru}}]</ref><ref name="Феоктистов А.П"/> [[Рамаданбуе]]сэ, [[Мордовия]]со.
 
 Ашти [[Аморда лей]] лангсо. Лецтяви ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) ''Старая Куриловка — 74 кудот марто Саранонь уездсэ''.
 
@@ -72,6 +72,7 @@
 == Содавикс ломанть те велестэнть ==
 Куриловасо чачсть:
 * [[Никул Эркай]]<ref name="Многоликая"/>— эрзянь сёрмадей
+* [[Бажанов, Владимир Васильевич|Владимир Бажанов]]<ref name="Феоктистов А.П">Феоктистов А.П. Очерки по истории формирования мордовских письменно литературных языков / А.П. Феоктистов. — Саранск: Мордов. кн. изд-во, 2008. — 392 с.  ISBN 978-5-7595-1753-5 {{Ref-ru}}</ref> — эрзянь ютавтыця, этнограф
 
 == Веленть эрямозо  ==
 Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] велесэнть улить<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>: ''Рёва угол''; лей ''Романовка''; курот: ''Тарасынка'', ''Больноинькат'', ''Игаевка'', ''Тарасынка'';  латкот: ''Азорлей'', ''Болтин латко'', ''Азорлей''; паксят: ''Бушов угол'', ''Рёва угол ''; ''Курганлей''; ''Лишмень трямо лей''; эрьке ''Романовка''.
