*Empty MediaWiki Message*

--- a/Куторкин_Андрей_Дмитриевич.mw
+++ b/Куторкин_Андрей_Дмитриевич.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Куторкинэнь Андрей''' (cёрмадей лемезэ {{Lang-myv|А. Ёндол}}, [[1906]] [[умарьковонь 25 чи]]  - [[1991]] [[панжиковонь 12 чи]]  ) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморонь ладсий<ref name="«Эрзянь Мастор»">«Эрзянь Мастор», №479, АНДРЕЙ ЁНДОЛНЭНЬ 110 ИЕТЬ {{Ref-myv}}</ref>.  
+'''Куторкинэнь Андрей''' (cёрмадей лемезэ {{Lang-myv|'''А. Ёндол<ref name="Библиотека_Куторкин Андрей ">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=25 Библиотека мордовской литературы. Куторкин Андрей Дмитриевич (А. Ёндол)]{{ref-ru}}</ref>'''}}, [[1906]] [[умарьковонь 25 чи]]  - [[1991]] [[панжиковонь 12 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ сёрмадей ды валморонь ладсий<ref name="«Эрзянь Мастор»">«Эрзянь Мастор», №479, АНДРЕЙ ЁНДОЛНЭНЬ 110 ИЕТЬ {{Ref-myv}}</ref>.  
 
 Чачсь [[1906]] [[умарьковонь 25 чи]]стэ Студенец велесэ неень Порец буень [[Ветькень Республикась|Ветькень Республика]]со изыця-видицянь семиясо. Прядызеть Порецень куншка школанть. 1924 иестэ 1927 иес тонавтнесь  Ульянонь совпартшколасо, косто сонзе кучить Мордовияв. Ульнесть тензэ 18 иеть. Тесэ чалгаськак литературань кинть лангс. Пек лездась политпросвещениянь коряс тонавтыцясь Анна Александровна Караваева. Самай сон тешкстынзе тонавтницянть ёрокчинзэ. Се шкастонть Андрей Куторкинэнь лемесь появась Алатырень уездэнь «Трудовой газетасонть». «Деревенские» – истя лемдязель васенце очеркезэ. «Красная звезда» газетасонть лиссть прозань лия произведениянзо. 
 {{Цитатань ушодома}}«Талантонь сяткине эйсэть ули, ды, паряк, кирвази покш толпандя»<ref name="«Эрзянь Мастор»" />
