*Empty MediaWiki Message*

--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -5,7 +5,7 @@
 Нолдави [[Самар ош|Самар ошсо]] [[1 (ловома вал)|весть]] [[ков|ковозонзо]] якшамковонь 1929 иестэ саезь. Тевсь нолдамось сокиця-видицянь коряс журнал-ставкслопа [[эрзят|эрзятненень]] ульнесь путозь [[чадыков|чадыковонь]] 5-це чистэ 1928 иестэ Вейсроссиянь промкссо партиянь важодицятнень периодической ды аволь эрзянь ды мокшонь [[Кулялопат|кулялопатнень]]. 1930 иень [[якшамков|якшамковсто]], коли ульнесь теезь-путозь Эрзямокшонь эсь азорксчи марто ёнксось, журнал-ковставксось кармась нолдавомо [[Саран ош|Сарансо]].
 СССР-нь Верховной Советэнь Призидиумось казизе «Сятко» ковставксонть-журналонть «Знак Почёта» орденсэ, [[1979 ие]]нь [[эйзюрковонь 6 чи]]стэ.
 
-== Прявтсо ломанензэ ==
+== Прявтсо ломанензэ<ref name="«Сятко2003_5»">«Сятко», №1,1― 114, 2003 ие, 5-це лоп. Зярдо ды кие журналонть прявтсоль{{Ref-myv}}</ref> ==
 *[[Гребенцов, Д.И.]] (1929 ― 08.1931)
 *[[Звездин, К.Д.]] (09.1931 ― 08.1932) 
 *[[Лукьянов, Алексей Миронович|Алексей Лукьянов ]] (09.1932 ― 08.1933) 
@@ -20,18 +20,17 @@
 
 *[[Иркаев, Николай Лазаревич|Иркаев Н. Л.]] (01.1956 ― 04.1958) эли (04.1956 ― 01.1959)<ref name="Республиканская архивная служба">[http://www.sudbasoldata.ru/3409/ Республиканская архивная служба Республики Мордовия: Иркаев Николай Лазаревич (Документы) {{Ref-ru}}]]</ref>
 *[[Вечканов, Серафим Емельянович|Вечканов С.Е.]] (05.1958 ― 08.1959) 
-*[[Куторкин, Андрей Дмитриевич]] (09.1958 ― 06.1959) 
+*[[Куторкин, Андрей Дмитриевич|Андрей Куторкин]] (09.1958 ― 06.1959) 
 *[[Мартынов, Александр К.]] (07.1959 ― 10.1963) 
 *[[Пятаев, Емельян Иванович|Пятаев Е.И.]] (11.1963 ― 12.1966) 
-*[[Щеглов, Александр С.]] (01.1967 ― 12.1971) 
+*[[Щеглов, Александр Сергеевич|Александр Щеглов]] (01.1967 ― 12.1971) 
 *[[Мартынов, А.К.]] (01.1972 ― 06.1977) 
 *[[Калинкин, Иван Алексеевич|Калинкин Иван Алексеевич]] (07.1977 ― 06.1984) 
 *[[Доронин, Александр Макарович]] (06.1984 ― 02.2000) 
 *[[Арапов, Александр Васильевич|Александр Арапов]] (03.2000 ―14.06.2011)
 *[[Разгуляева, Татьяна Васильевна|Татьяна Разгуляева]]
 
-== Сёрм.: ==
-* Сятко 2003/1
+== Лисьм.: ==
 <references />
 
 
