*Empty MediaWiki Message*

--- a/Кенде_(Тумобуе).mw
+++ b/Кенде_(Тумобуе).mw
@@ -70,7 +70,7 @@
 == Содавикс ломанть те велестэнть ==
 Кендевелесэ чачсть:
 * [[Араповонь Саша|Александр Арапов]] — [[эрзя]]нь [[сёрмадей]], валморонь ладсий
-* А.С. Щеглов — сёрмадей
+* [[Щеглов, Александр Сергеевич|Александр Щеглов]]<ref name="«Сятко2003_5»">«Сятко», №1,1― 114, 2003 ие, 5-це лоп. Зярдо ды кие журналонть прявтсоль{{Ref-myv}}</ref>  — сёрмадей, 01.1967 ― 12.1971 [[Сятко (журнал-ковставкс)|Сятко ковставксонть]] прявтредактор.
 * О.П. Василькина — заслуженной тонавтыця МАССР-нь
 * М.М. Федотова — заслуженной Мордовиянь шумбрачинь максыця 
 * [[Седойкин, Михаил Григорьевич|Михаил Седойкин]]<ref>[http://nudej.livejournal.com/28653.html Эрзянь морот: Михаил Седойкин]{{ref-myv}}</ref> — морыця
@@ -83,7 +83,7 @@
 Кенде ваксонзо ули  — именькень культурань ёмазь  ошке ды велине. 
 
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|К]]
