*Empty MediaWiki Message*

--- a/Шарононь_Сандра.mw
+++ b/Шарононь_Сандра.mw
@@ -23,17 +23,76 @@
  |вальма               = 
  |википурнавкс         = 
 }}
-'''Шарононь Сандра''' ({{lang-ru|Александр Маркович Шаронов}}, [[1942]] [[даволков]]онь 18 чистэ Шокша велесэ [[Теньгушбуе]]сэ) — [[Эрзянь кель|эрзянь]] ды рузонь кельсэ сёрмадей, наукань келеньсодыця докторось.
+'''Шарононь Сандра<ref name="«МАСТОРАВА»  ">[http://uzluga.ru/potrc/Дня+«Масторавы»+«Масторавань»+Чи+(21+декабря,+чинь+раштамочи)c/main.html «МАСТОРАВА» - ЭРЗЯ РАСЬКЕДЕНТЬ ИНЕ ВАЛ ]{{ref-myv}}</ref>''' ({{lang-ru|Александр Маркович Шаронов}}, [[1942]] [[даволковонь 18 чи]]стэ Шокша велесэ [[Теньгушбуе]]сэ) — [[Эрзянь кель|эрзянь]] ды рузонь кельсэ сёрмадей, наукань келеньсодыця докторось.
 
 == Эрямопингезэ ==
-Чачсь [[1942 ие]]нь [[даволков]]онь 18 чистэ Шокша велесэ [[Теньгушбуе]]сэ. Прядызеть Васеньце Якстерекуронь технической училищанть ([[1959]]—[[1961]] иетнестэ), мейле ульнесь масторонь ванстыцякс — ульнесь армиясо ([[1962]]—[[1965]]), прядызеть эрямопингень фаультетенть Мордовиянь Прявтуниверситетсэ ([[1965]]—[[1969]]), важодсь эрямопингень ды вейсэньсовавтома (обществовведение) тонавтыцякс [[Отяжбуе]]нь Кузломань куншкань школасо ([[1969]]).
+Чачсь [[1942 ие]]нь [[даволковонь 18 чи]]стэ [[Шокш (Теньгушбуе)|Шокш велесэ]]<ref name="Библиотека_Шаронов ">[http://www.lib.e-mordovia.ru/Library/?Char=%D8&id=0 Библиотека мордовской литературы. Шаронов Александр Маркович]{{ref-ru}}</ref> [[Теньгушбуе]]сэ. Прядызеть Васеньце Якстерекуронь технической училищанть ([[1959]]—[[1961]] иетнестэ), мейле ульнесь масторонь ванстыцякс — ульнесь армиясо ([[1962]]—[[1965]]), прядызеть эрямопингень фаультетенть Мордовиянь Прявтуниверситетсэ ([[1965]]—[[1969]]), важодсь эрямопингень ды вейсэньсовавтома (обществовведение) тонавтыцякс [[Отяжбуе]]нь Кузломань куншкань школасо ([[1969]]).
  
-[[Эрзянь Мастор|Эрзянь]] ды Омбомасторонь эрицятне содасызь Шарононь Сандрань кода Ине валморонь сёрмадеекс, сон 15-де иень седе ламо тейсь эсензэ «пакшанзо» — [[«Масторава» морокерькс|«Масторава» морокерьксэнзэ]].
+[[Эрзянь Мастор|Эрзянь]] ды Омбомасторонь эрицятне содасызь Шарононь Сандрань кода Ине валморонь сёрмадеекс, сон 15-де иень седе ламо тейсь эсензэ «пакшанзо» — [[«Масторава» морокерькс|«Масторава» морокерьксэнзэ]]. Те шкинеманзо кис покш питне мерсть омбомасторонь куляньсёрмадейть ды учённойть<ref name="Библиотека_Шаронов "/>: Пекка Лентонен, Тармо Хаккарайнен, Сиркка Сааринен ([[Суоми Мастор]]), Петер Домокош ([[Мадьяронь Мастор]]), Мария Дуганчи ([[Швеция Мастор]]).
 
-Истяжо сонзэ [[Кедь|кедь]] алдо лиссть: «Планета Эра», «Потехония», «Любовь и карлик» повестьтне.
+Истяжо сонзэ [[Кедь|кедь]] алдо лиссть: «Шокша», «Планета Эра», «Потехония», «Любовь и карлик» повестьтне.
 
-[[1995]] [[Ие|иестэ]] казезь Мордовия Республикань Масторпельдень Казнесэ, ды [[1997]] иестэ М. А. Кастрен вейсендявксонть Васенце Сёрмадыцянь Казнесэ.
+[[1995]] [[Ие|иестэ]] казезь Мордовия Республикань Масторпельдень Казнесэ, ды [[1997]] иестэ М. А. Кастрен вейсендявксонть Васенце Сёрмадыцянь Казнесэ<ref name="«Финно-угорский мир»">[http://finno-ugry.ru/educres/educenter_udsu/museum/scientists/Sharonov «Финно-угорский мир» Шаронов А.М.]{{ref-ru}}</ref>.
 
+== Шкинемазо==
+=== Рузонь кельсэ ===
+# К вопросу об изучении русско-мордовских фольклорных отношений // Вопросы финно-угорского фольклора: Труды МНИИЯЛИЭ. Вып. 50. - Саранск, 1974. - С.149-167.
+# Сравнительное изучение исторических песен русского и мордовского народов // Вопросы финно-угроведения. Вып. VI. - Саранск, 1975. - 8 с.
+# Мордовские исторические песни о Пугачеве // Фольклор и историческая действительность: Всесоюз. науч. конф.: Тез. докл. - Махачкала, 1976. - С. 56-57.
+#Устно-поэтическое творчество мордовского народа. Т.1. Кн. 2. Исторические песни ХVI-ХVIII веков. – Саранск, 1977. - 352 с.
+# Мордовское народное устно-поэтическое творчество: Очерки. - Саранск, 1975. // Советская этнография, 1978. № 1.- С. 181-182.
+#Образ родоплеменного вождя в мордовском фольклоре (в аспекте сравнительного изучения) // Вопросы финно-угроведения: Тез. докл. на ХVI Всесоюз. конф. финно-угроведов. - Сыктывкар, 1979. - С. 109-110.
+# А.И. Полежаев и фольклор // Поэзия А.И. Полежаева: Межвуз. сб. науч. тр. - Саранск, 1989. - С. 145-153.
+# «Сияжар» и мордовский народный эпос / В соавт. с Г.Я. Меркушкиным и др.// Аспект-1989. - Саранск, 1989. - С. 107-110.
+# «Мордва» - этническое имя или прозвище // Вестник Мордовского университета, 1990. № 3. - С. 34-35.
+#  Пургас // Вдохновение: Лит.-худ. сб. - Саранск, 1991. - С. 225-233.
+# Без собственного лица // Политический вестник, 1991. № 3. - С. 15-21.
+# Подложное яйцо демократов // Политический вестник, 1991. № 7.      - С. 8-14.
+# А.И. Маскаев (1907-1975) // Мордовский университет: Историко-хроникальный очерк. - Саранск, 1992. -С. 132-134.
+# Тюштя // История Мордовии в лицах: Биографический справочник. - Саранск, 1994. - С. 202.
+# Анге-Патяй – Инешкиава // Финно-угристика на пороге 3-го тысячелетия: Материалы 2-ой Всерос. науч. конф. финно-угроведов 2 - 5 февраля 2000 года. - Саранск, 2000. - С. 491-494.
+#  Мордовский героический эпос: Сюжеты и герои // Саранск, 2001. - 207 с. Рец.: Исследование о героическом эпосе (О монографии А.М. Шаронова «Мордовский героический эпос: Сюжеты и герои. – Саранск, 2001. - 207 с.) / А.М. Доронин // Масторава, 2002, № 23-24, декабрь.
+# Избрание царя Тюштяна // Рябовы: pro et contra: Сборник материалов Рябовских научных чтений, г. Саранск, 16 апреля 2002 г. - Саранск, 2002. - С. 219-224.
+# Масторава (Перевод на русский язык А.М. Шаронова) - Саранск, 2003. - 488с. Рец.: «Масторава». - Саранск, 2003. - 488 с. / Е.А. Федосеева // Регионология, 2003. № 3. - С. 328-331; «Масторава» – по-русски // Эрзянь Мастор, 2003, 11 июня.
+# Грехопадение // Роль науки в соц.-экон. развитии Респ. Мордовия: Материалы респ. науч.-практ. конф., посвященной 70-летию НИИГН при Правительстве Республики Мордовия. - Саранск, 2003. - С. 143-146.
+# Песни о Тюште: Тюштя и дочь его Кирдюня // История и этнокультура восточных финно-угров: Материалы междунар. науч.-практ. конф. «Функционирование языков и состояние этнокультуры восточных финно-угорских народов: Проблемы и перспективы развития. - Саранск, 2003. - С. 184-190.
+# Мордовский героический эпос // Мордва. – Саранск, 2004. – С. 532-545.
+# Русско-мордовские отношения в песнях о полоне // Социальные конфликты в России ХУ11-ХУ111 веков. – Саранск, 2005. – С. 478-488.
+# Особенности национального восприятия мордовской истории в песнях о Тюште // Филологические исследования 2003-2004: Межвузовский сборник научных трудов. МГУ им. Н.П.Огарева. – Саранск, 2005. – С. 223-228.
+#  Х Международный конгресс финно-угроведов // Мордовия: наука, инновации, новые технологии. 2005. № 4. – С. 44-45.
+# О героическом эпосе эрзи и мокши // Финно-угроведение, 2005. № 1. 2006
+# Сотворение мира // В.В.Горбунов: служение словом, служение слову. – Саранск, 2006. – С. 170-176.
+# Мордовский пантеон//Проблемы культуры в современном образовании: глобальные, национальные, региональные, этнические: Сборник научных статей в 3-х частях. Ч.2. – Чебоксары: Чувашгоспедуниверситет им. И.Я.Яковлева. – 2006. – с.35-37. 
+#  На земле Инешкипаза. – Саранск, 2006. – 408 с.
+# Миф и песня в героическом эпосе мордвы // VII Конгресс этнографов и антропологов России. Саранск, 9-14 июля 2007 г. – Саранск, 2007.                            С.368-369.
+# «Эрьмезь» Я.Я.Кулдуркаева: отношение к литературе и героическому эпосу //Од вий=Молодая сила: сб. науч. Ст. аспитрантов и докторантов/ отв. Ред. и сост. Г.А.Куршева; НИИ гуманитар. Наук при Правитьельстве РМ. – Саранск, 2008 . – С. 156-163. (соавтор Е.А.Федосеева)
+#   Мордовский вариант мифа о сотворении мира // Филологические исследования 2003-2004: Межвузовский сборник научных трудов. МГУ им. Н.П.Огарева.- Саранск, 2005. – С. 228-237.
+#  О фольклорной основе поэм В.К.Радаева «Сияжар» и «Тюштя»// Од вий - Молодая сила. – Саранск, 2008. – С. 164-172. 
+#  Устное народное поэтическое творчество// Дубёнский район. История. События. Люди./авт.-сост.: Н.В.Заварюхин и др. – Саранск, Тип. «Красс. Октябрь», 2008. – С. 197-202.
+#  Мордовская версия мифа о сотворении человека //«Литературный процесс: история и современность /отв. ред и сост. В.А.Юрченков; НИИгуманитар. Наук при Правительстве РМ. – Саранск, 2008. – С. 204-211. 
+#   О природе мордовской мифологии // Синтез документального и художественного в литературе и искусстве: сборник статей и материалов второй международной научной конференции (5-9 мая 2008 г.). – Казань:РИЦ «Школа», 2009. – 460 с.
+#   «Масторава» и «Калевала»: в фокусе типологии // VIII конгресс этнографов и антропологов России. Тезисы докладов. Оренбург, 1-5 июля 2009 г. – Оренбург, Издательский центр ОГАУ 2009. – С. 210.
+#   Картина мироздания в мифологии народа Эрзя // Ежегодник финно-угорских исследований. – Ижевск. № 2. 2009. – 388 с. - С.83-91. (Науч. ред. Н.И. Леонов).
+#   О своеобразии эрзянской эпико-героической поэзии // Вестник НИИГН при Правительстве РМ. 2009.  № 1 (11). – С. 221-228. 
+#  О понятии мифологии народа Эрзя /Экология традиционной культуры и проблемы современного искусства. Материалы международной научно-практической конференции. Саранск, 22 апреля 2009 г. – Саранск: Изд-во Мордов.ун-та, 209. – С.83-85.
+
+=== Эрзянь кельсэ ===
+# Эрзя-мокшонь героической эпосось ды Тюштя инязоронь образось // Сятко, 1979, № 5. - С. 69-71.
+#  Косат тон,Тюштя? // Сятко, 2000. № 12. - С. 99-108.
+# Масторонь чачома // Сятко, 2001. № 5. - С. 99-107.
+#  Пазонь пусмо // Сятко, 2001. № 12. - С. 81-85.
+#   Масторава. Саранск: Эрзянь Мастор, 2010. 264 с.: ил.
+
+=== Мокшонь кельсэ ===
+# Масторава (Эрзяннеста мокшень кяльс ётафтозе М. Моисеев). – Саранск, 2001. - 432 с.
+# Мокшэрзянь васень грехсполаямасна // Мокша, 2001. № 8. - С. 99-101.
+
+=== Лия кельсэ ===
+# Масторава. - Саранск, 1994. - 496 с. Рец.: Свет «Масторавы» / В.И. Демин // Вестник Мордовского университета, 1996. № 2; «Масторава - эпос эрзи и мокши / Н.И. Чиняев // Мордовия, 1995, 23 марта; Mastorava on pienen Kansan Zankaritarina / Pekka Lentonen // Kansan Uutizet , 1998, II, 2; Mastorava, mordvalaisten Sankariepos / Tarmo Hakkarainen // HIIDENKIVI. 6/99. - SUOMALAINEN  KULTTURILENT. - S. 25-27; 
+# Die Heldendichtung abs Spigel des national und historischen Bewubseins der Mordwinen || Mari und Mordwinen im heitigen Rusland. Sprahe, Kultur, Identitet. Harrasowits Verlag-Wiesbaden in Komission. – 2005. – S. 517-528.
+
+== Лисьм.: ==
+<references />
 
 [[Category:Эрзянь Ине ломанть]]
 [[Category:Эрзянь сёрмадейть|Ш]]
