--- a/Шяйгужа_(Атюрьбуе).mw
+++ b/Шяйгужа_(Атюрьбуе).mw
@@ -60,8 +60,12 @@
 }}
 '''Шяйгужа'''  (лиякс кортыть: '''Шяйгуш<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''', {{lang-ru|д. Шайгуши}}) — те мокшонь<ref>[http://mnogolik-mordovia.mrsu.ru/b_Shaigushi.htm Многоликая Мордовия: деревня Шайгуши] {{ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
 
+== Содавикс ломанть те велестэнть ==
+Шяйгужасо чачсть:
+* [[Шукшин, Иван Афанасьевич|Иван Шукшин]]<ref name="Библиотека_Шукшин">[http://www.lib.e-mordovia.ru/Library/?Char=%D8&id=1 Библиотека мордовской литературы. Шукшин Иван Афанасьевич]{{ref-ru}}</ref> — мокшонь сёрмадей, валморазей
+
 == Веленть лемденть ==
-{{Lang-mdf|шяй}} ({{Lang-myv|чей}}) + {{Lang-mdf|куяса}} ({{Lang-myv|кужо}})
+{{Lang-mdf|шяй}} ({{Lang-myv|чей}}) + {{Lang-mdf|куяса}} ({{Lang-myv|кужо}}).
 
 == Сёрм.: ==
 <references />
