*Empty MediaWiki Message*

--- a/Поповка_(Пейкужо_буе).mw
+++ b/Поповка_(Пейкужо_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 169
+  |эрицятне               = 169<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,8 +58,25 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Поповка''' — [[мокшот|мокшонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]].
-Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]]. 
+'''Поповка''' — [[мокшот|мокшонь]]<ref name="РГО_п. Поповка">[http://geo13.ru/reestr/object/552 Геопортал РГО РМ:  п. Поповка]{{ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия Республикасонть]].
+Велесь совавтови [[Пейкужо буе|Пейкужо буеньте]].  Ашти [[Лундан лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ''Поповка – веле 29 кудот марто Пейкужонь вельсоветсэ''.}}
+{{oq|ru|«В «Списке населенных пунктов Средне-Волжского края» (1931) – Поповка, поселок из 29 дворов  Зубово-Полянского сельсовета.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 192 лом., 2010 иень ловномасонть - 169 ломанть.  
+Кода сёрмады [[Цыганкин, Дмитрий Васильевич|Дмитрий Цыганкин]] веленть марто сюлмавозь<ref name="Память, запечатленная в слове"/>: Байдекунь шире, Жольняма, Калдаевка, Мальба родник, Мильнецень омут, Олешник, Родник ки, Синдинь болота, Байдекунь шире.  
+
+== Содавикс ломанть те велестэнть ==
+Поповкасо чачсть:
+* [[Шуляев, Алексей Дмитриевич|Алексей Шуляев]]<ref name="Библиотека_Шуляев">[http://www.lib.e-mordovia.ru/Library/?Char=%D8&id=2 Библиотека мордовской литературы. Шуляев Алексей Дмитриевич]{{ref-ru}}</ref> — мокшонь сёрмадей, валморазей
+
+== Веленть лемденть  ==
+Лемесь–тезь модатнень лангсо, конань кирдсь бачка<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> Булдыгино велестэ.
+
+== Веленть эрямодонть  ==
+== Лисьм.: ==
+<references />
 
 
 [[Category:Мордовиянь велеть]]
