*Empty MediaWiki Message*

--- a/Исапря_(Инесаро_буе).mw
+++ b/Исапря_(Инесаро_буе).mw
@@ -61,7 +61,11 @@
 
 '''Исапря''' ({{Lang-ru|с. Старые Верхиссы}})   — мокшонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/i_Starie_Verhissi.htm Многоликая Мордовия: Село Старые Верхиссы] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Инесаро буе]]сэ.
 
-== Сёрм.: ==
+==Содавикс ломанть те велестэнть==
+Исапря велесэ чачсть:
+* [[Черапкин, Николай Иосифович|Николай Черапкин]]<ref name="Библиотека_Черапкин">[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=0 Библиотека Мордовской Литературы. Черапкин Николай Иосифович]{{ref-ru}}</ref>— мокшонь сёрмадей.
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
