--- a/Нуянь_Видяз.mw
+++ b/Нуянь_Видяз.mw
@@ -22,12 +22,12 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Нуянь Видяз''' ({{lang-ru|Четвергов Евгений Владимирович}}) ([[Эйзюрковонь 30 чи]] [[1934 ие]] [[Тумобуе]]) — советэнь учёной-агроном, эрзянь сёрмадей, прявтредактор [[«Эрзянь Мастор» (кулялопа)|«Эрзянь Мастор» кулялопанть]].
+'''Нуянь Видяз<ref name="Библиотека_Четвергов"/>''' ({{lang-ru|Четвергов Евгений Владимирович}}) ([[Эйзюрковонь 30 чи]] [[1934 ие]] [[Тумобуе]]) — советэнь учёной-агроном, эрзянь сёрмадей, прявтредактор [[«Эрзянь Мастор» (кулялопа)|«Эрзянь Мастор» кулялопанть]].
 
 == Эстедензэ ==
-Чачсь [[1934 ие]]нь [[Эйзюрковонь 30 чи]]стэ Мордовия АССР-нь [[Тумобуе]]нь  Орданьбуе эрзянь велесэ. Тумобуень (Дубинкань) куншка школань прядомодо мейле (1952) важоди Од ломаннеь Максим Горькиень лемсэ театрасо сценань важодицякс (Бакусо) ды чачома велесэнзэ - клубонь прявтокс (1953-1954-це иетнестэ). 1959-1959 иетнестэ Пензань велень хозяйствань институтонь агрономия факультетэнь студент.
+Чачсь [[1934 ие]]нь [[Эйзюрковонь 30 чи]]стэ Мордовия АССР-нь [[Тумобуе]]нь  [[Орданьбуе (Тумобуе)|Орданьбуе]] эрзянь велесэ. Тумобуень (Дубинкань) куншка школань прядомодо мейле (1952) важоди Од ломаннеь Максим Горькиень лемсэ театрасо сценань важодицякс (Бакусо) ды чачома велесэнзэ - клубонь прявтокс (1953-1954-це иетнестэ). 1959-1959 иетнестэ Пензань велень хозяйствань институтонь агрономия факультетэнь студент.
 
-[[6 (ловома вал)|Кото]] иеть ульнесь «паксняь азорокс», агрономокс Ордань ды Ковылкань буень келей-покш вейсхозтнесэ. [[30 (ловома вал)|Колоньгеменде]] ламо иеть эрямозо сюлмавозель Мордовиянь Ораёвонь лемсэ университетэнть марто: аспирант, ассистент, тонавтыця, доцент. Велень хозяйствань наукатьнень кандидат. Нолдась ведьгеменде<ref>[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=2 Библиотека Мордовской литературы: Четвергов Евгений Владимирович] {{ref-ru}}</ref> ламо статьят, книгат, вейке изобретениянь соавтор. Тонавтомань интересэнзэ: модань паролгавтома ды сюронь кастома, сюронь ванстома зыян тикшетнеде ды унжатнеде-сукнэде (насекомойтнеде).
+[[6 (ловома вал)|Кото]] иеть ульнесь «паксняь азорокс», агрономокс Ордань ды Ковылкань буень келей-покш вейсхозтнесэ. [[30 (ловома вал)|Колоньгеменде]] ламо иеть эрямозо сюлмавозель Мордовиянь Ораёвонь лемсэ университетэнть марто: аспирант, ассистент, тонавтыця, доцент. Велень хозяйствань наукатьнень кандидат. Нолдась ведьгеменде<ref name="Библиотека_Четвергов">[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=2 Библиотека Мордовской литературы. Четвергов Евгений Владимирович] {{ref-ru}}</ref> ламо статьят, книгат, вейке изобретениянь соавтор. Тонавтомань интересэнзэ: модань паролгавтома ды сюронь кастома, сюронь ванстома зыян тикшетнеде ды унжатнеде-сукнэде (насекомойтнеде).
 
 == Сёрмадовксонзо ==
 [[Image:Izdateli Erzian Mastor.JPG|thumb|300px|right|''«Эрзянь Мастор» кулялопанть нолдыцянзо: прявтвитницязо - Нуянь Видяз (кершёно), Эрзянь Келень Идема Фондонть прявтось - Кшуманцянь Пиргуж (витьёно)'']]
