*Empty MediaWiki Message*

--- a/Орданьбуе_(Тумобуе).mw
+++ b/Орданьбуе_(Тумобуе).mw
@@ -65,6 +65,7 @@
 
 ==Содавикс ломанть те велестэнть==
 * [[Сульдина, Анна Дмитриевна|Анна Сульдина]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> — эрзянь валморозей.
+* [[Нуянь Видяз]]<ref name="Библиотека_Четвергов">[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=2 Библиотека Мордовской литературы. Четвергов Евгений Владимирович] {{ref-ru}}</ref>— эрзянь сёрмадей, советэнь учёной-агроном, прявтредактор [[«Эрзянь Мастор» (кулялопа)|«Эрзянь Мастор» кулялопанть]].
 
 
 == Лисьм.: ==
