*Empty MediaWiki Message*

--- a/Сайця_(Якстерекуро_буе).mw
+++ b/Сайця_(Якстерекуро_буе).mw
@@ -74,7 +74,7 @@
 {{Цитатань пе}}
 
 == Содавикс ломанть те велестэнть ==
-* Н. П. Циликин<ref>[http://www.kulyat.info/krasnaya-sloboda-krasnoslobodsk/2708-talant-dar-bozhij.html КулятИнфо: «Талант – дар божий»] {{ref-ru}}</ref>— мокшонь валморозей 
+*[[Циликин, Николай Петрович|Николай Циликин]]<ref>[http://www.kulyat.info/krasnaya-sloboda-krasnoslobodsk/2708-talant-dar-bozhij.html КулятИнфо: «Талант – дар божий»] {{ref-ru}}</ref><ref name="Библиотека_Циликин">[http://www.lib.e-mordovia.ru/Library/?Char=%D6&id=0 Библиотека Мордовской литературы. Циликин Николай Петрович] {{ref-ru}}</ref>— мокшонь валморозей 
 == Веленть эрямозо  ==
 [[1913 ие]]стэ велесэнть ульнесь 101 кудот-кардаст (753 лом.); [[1931 ие]]стэ — 111 хозяйстват (743 лом.). [[1933 ие]]стэ ульнезь теезь «Мазы пакся» вейсхоз. 1950-це ии. хозяйства Ждановань лемсэ, 1970-це ии. — «Дружба», саезь 2000 иестэ — СХПК «Зайцевский».
 == Сёрм.: ==
