*Empty MediaWiki Message*

--- a/Сайця_(Якстерекуро_буе).mw
+++ b/Сайця_(Якстерекуро_буе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Сайця''' (лиякс кортыть: Зайця<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>''', {{Lang-ru|с. Зайцево}}) — мокшонь веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
+'''Сайця''' (лиякс кортыть: '''Зайця<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>''', {{Lang-ru|с. Зайцево}}) — мокшонь веле [[Якстерекуро буе]]сэ, [[Мордовия]]со.
 
 Ашти [[Лепляйка]] лангсо. Кода лецтяви:
 {{Цитатань ушодома}} ({{Lang-myv|«Списке населенных мест Пензенской губернии»}}) ([[1869 ие]]) ''Зайцево – веле 63 кудот марто Якстерекуронь уездсэ''.
