*Empty MediaWiki Message*

--- a/Цыганкин,_Дмитрий_Васильевич.mw
+++ b/Цыганкин,_Дмитрий_Васильевич.mw
@@ -23,7 +23,7 @@
  |вальма                = http://www.cigankin.ru/
  |википурнавкс         = 
 }}
-'''Цыганкин Дмитрий Васильевич''' ([[1925 ие|1925 иень]] [[ожоковонь 22 чи]] [[Мокшалей (Чаунзабуе)|Мокшалей веле]]) - эрзянь ине кельсодый, профессор.
+'''Цыганкин Дмитрий Васильевич''' ([[1925 ие|1925 иень]] [[ожоковонь 22 чи]] [[Мокшалей (Чаунзабуе)|Мокшалей веле]]) — эрзянь ине кельсодый, профессор.
 == Эрямо пингезэ ==
 Чачсь Д.В. Цыганкин [[1925 ие|1925 иень]] ожоковонь 22 чистэ Саранонь уездэнь Пензань губерниянь Мокшалеень волостень Мокшалей велесэ (ней – [[Мордовия Республикась|Мордовия Республикань]] [[Чаунзабуе]]. 1940 иестэ прядынзе Мокшалеень аволь пешксе школань сисем класснэнь ды тусь тонавтнеме Покш Маризьвелень средней школас.
 
