*Empty MediaWiki Message*

--- a/Заберезова_(Якстерекуро_буе).mw
+++ b/Заберезова_(Якстерекуро_буе).mw
@@ -71,7 +71,7 @@
 Лемесь-невтема, велесь ульнесь путозь [[килей]] [[вирь|виренть]] тона боксо<ref name="Память, запечатленная в слове"/>.
 
 == Содавикс ломанть те велестэнть ==
-* [[Феоктистов, Александр Павлович|Александр Феоктистов]]<ref name="Библиотека_Феоктистов">[http://www.lib.e-mordovia.ru/Library/?Char=%D4&id=1 Библиотека Мордовской литературы. Феоктистов Александр Павлович] {{ref-ru}}</ref>— мокшонь ине кельсодый, профессор.
+* [[Феоктистов, Александр Павлович|Александр Феоктистов]]<ref name="Библиотека_Феоктистов">[http://www.lib.e-mordovia.ru/Library/?Char=%D4&id=1 Библиотека Мордовской литературы. Феоктистов Александр Павлович] {{ref-ru}}</ref><ref name="Цыганкин Дмитрий Васильевич ">[http://www.cigankin.ru/archives/411 Цыганкин Дмитрий Васильевич // Александр Павлович Феоктистов – один из виднейших финно-угроведов (27 августа 1928 – 6 сентября 2004)]{{ref-ru}}</ref>— мокшонь ине кельсодый, профессор.
 
 == Веленть эрямозо  ==
 
