--- a/Сирс_Сендру_(Якстерекуро_буе).mw
+++ b/Сирс_Сендру_(Якстерекуро_буе).mw
@@ -74,7 +74,7 @@
 * Ф. И. Петербургский<ref>[http://st-sindrovo.ru/history/k-125-letiyu-peterburgskogo-fedora-ivanovicha.php К 125-летию со дня рождения Петербургского Федора Ивановича] {{ref-ru}}</ref>— келеньсодый
 * И. М. Петербургский  — археолог
 * В. И. Матяев<ref name="История"/> — учёной-зоотехник
-*  [[Чигодайкин, Иван Васильевич|Иван Чигодайкин]]<ref name="История">[http://st-sindrovo.ru/history/selo-posle-oktyabrskoy-revolyucii.php Село Старое Синдрово после октябрьской революции] {{ref-ru}}</ref><ref name="Библиотека_Четвергов">[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=3 Библиотека Мордовской литературы. Чигодайкин Иван Васильевич] {{ref-ru}}</ref>— валморозей
+* [[Чигодайкин, Иван Васильевич|Иван Чигодайкин]]<ref name="История">[http://st-sindrovo.ru/history/selo-posle-oktyabrskoy-revolyucii.php Село Старое Синдрово после октябрьской революции] {{ref-ru}}</ref><ref name="Библиотека_Чигодайкин">[http://www.lib.e-mordovia.ru/Library/?Char=%D7&id=3 Библиотека Мордовской литературы. Чигодайкин Иван Васильевич] {{ref-ru}}</ref>— валморозей
 *  Л. Е. Куликова — библиограф 
 *  М. С. Поршунова —  РСФСР-нь заслуженной тонавтыця 
 * П. Г. Богдашкина, И. П. Криворотова —  МАССР-нь заслуженной тонавтыця
