--- a/Левож_(Оразайбуе).mw
+++ b/Левож_(Оразайбуе).mw
@@ -58,6 +58,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
+{{Лия смустьтне|Левжа (смустьтне)}}
 '''Левож<ref name="РГО_с. Левжа"/>''' ({{Lang-ru|с. Левжа}}) — те мокшонь<ref name="РГО_с. Левжа">[http://geo13.ru/reestr/object/1083 Геопортал РГО в Республике Мордовия: с. Левжа] {{Ref-ru}}</ref> веле [[Мордовия Республикась|Мордовиясо]], [[Оразайбуе]]сэ.
 
 Ашти 2 [[вайгельпе|вп]] [[Левжа лей]]енть лисьмапрянзо эйстэ<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий республики мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>) лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
