*Empty MediaWiki Message*

--- a/Левож_(Оразайбуе).mw
+++ b/Левож_(Оразайбуе).mw
@@ -74,7 +74,7 @@
 == Содавикс ломанть те велестэнть ==
 Левож велесэ чачсть:
 * [[Учватов, Николай Иванович|Николай Учватов]]<ref name="Библиотека_Учватов">[http://www.lib.e-mordovia.ru/Library/?Char=%D3&id=0  Библиотека Мордовской литературы. Учватов Николай Иванович] {{ref-ru}}</ref>—  мокшонь валморозей, сёрмадей
-
+* [[Антонова, Мария Николаевна|Мария Антонова]]<ref name="Музыкальная энциклопедия">[http://enc-dic.com/enc_music/Antonova-M-N-397.html Музыкальная энциклопедия: Антонова М. Н.] {{ref-ru}}</ref>—  мокшонь морыця
 ==Веленть эрямозо==
 
 == Лисьм.: ==
