*Empty MediaWiki Message*

--- a/Колапона_(Атюрьбуе).mw
+++ b/Колапона_(Атюрьбуе).mw
@@ -58,9 +58,24 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Колапона'''  ({{lang-ru|д. Клопинка}}) — те мокшонь<ref>[http://mnogolik-mordovia.mrsu.ru/b_Klopinka.htm Многоликая Мордовия: деревня Клопинка] {{ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
+'''Колапона<ref name="Память, запечатленная в слове"/>'''  ({{lang-ru|д. Клопинка}}) — те мокшонь<ref name="РГО_д. Клопинка">[http://geo13.ru/reestr/object/246 Геопортал РГО в Республике Мордовия: д. Клопинка] {{ref-ru}}</ref> веле [[Мордовия Республикась|Мордовия]]со, [[Атюрьбуе]]сэ.
 
-== Сёрм.: ==
+Ашти [[Пишля лей]] лангсо<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1931 ие]]) ''Клопинка – веле 112 кудот марто Чёполтонь уездсэ''.}}
+{{oq|ru|В «СНМ Средне-Волжского края» (1931) –  Клопинка, деревня из 112 дворов  Мордовско-Козловского сельсовета  Темниковского района.}}
+{{Цитатань пе}}
+
+Эрицятнеде: [[2002 ие]]стэ ульнесь 184 лом., 2010 иень ловномасонть - 145 ломанть. 
+
+== Веленть лемденть  ==
+Лемесь-антропоним, саевсь кезэрень мокшонь цёра ''Колопа<ref name="Память, запечатленная в слове"/>'' лемстэнть.
+== Содавикс ломанть те велестэнть ==
+Колапона велесэ чачсь:
+* [[Торопкин, Павел Кузьмич|Павел Торопкин]]<ref name="Библиотека_Торопкин">[http://www.lib.e-mordovia.ru/Library/?Char=%D2&id=5  Библиотека Мордовской литературы. Торопкин Павел Кузьмич] {{ref-ru}}</ref>—  мокшонь валморозей, сёрмадей, куляньсёрмадей
+
+==Веленть эрямозо==
+
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
