*Empty MediaWiki Message*

--- a/Дубинька_(Тумобуе).mw
+++ b/Дубинька_(Тумобуе).mw
@@ -1,4 +1,3 @@
-
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              =Дубинька
@@ -40,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 3325
+  |эрицятне               = 3325<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -60,9 +59,24 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Дубинька (смустьтне)}}
-'''Дубинька''' ({{Lang-ru|Дубёнки}}) - эрзянь веле [[Мордовия]]со [[Тумобуе]]сэ.
+'''Дубинька''' ({{Lang-ru|Дубёнки}}) - эрзянь веле [[Мордовия]]со, [[Тумобуе]]нь куншка тарка.
 
+Ашти [[Сюксюрма лей]]<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> лангсо ([[Улянка лей|Улянка леенть]] верьга чудемава), [[Покшсельме лей|Покшсельме леенть]] вить сянглей. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1863 ие]]) ''Дубенки – веле 241 кудот марто Алатырень уездсэ''.}}
+{{oq|ru|В «СНМ Симбирской губернии» (1863) –  Дубенки, деревня из 241 дворов Алатырского уезда.}}
+{{Цитатань пе}}
 
-[[Category:Мордовиянь велеть|П]]
-[[Category:Тумобуень велеть|П]]
+== Веленть лемденть  ==
+Лемесь–номенклатурань термин, саеви {{Lang-ru|'''дубняк'''}} валонть марто.
+
+== Содавикс ломанть те велестэнть ==
+Дубинькасо чачсь:
+* [[Тремасов, Николай Яковлевич|Николай Тремасов]]<ref name="Библиотека_Тремасов">[http://www.lib.e-mordovia.ru/Library/?Char=%D2&id=1  Библиотека Мордовской литературы. Тремасов Николай Яковлевич] {{ref-ru}}</ref>—  эрзянь сёрмадей, куляньсёрмадей
+
+==Веленть эрямозо==
+== Лисьм.: ==
+<references />
+
+[[Category:Мордовиянь велеть|Д]]
+[[Category:Тумобуень велеть|Д]]
 [[Category:Эрзянь велеть]]
