*Empty MediaWiki Message*

--- a/Ежовка_(Покш_Игнадбуе).mw
+++ b/Ежовка_(Покш_Игнадбуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Ежовка''' - эрзянь веле [[Покш Игнадбуе]]сэ, [[Мордовия]]со.
+'''Ежовка''' — эрзянь веле [[Покш Игнадбуе]]сэ, [[Мордовия]]со.
 
 [[Category:Мордовиянь велеть]]
 [[Category:Покш Игнадбуень велеть]]
