*Empty MediaWiki Message*

--- a/Потманя_(Пейкужо_буе).mw
+++ b/Потманя_(Пейкужо_буе).mw
@@ -60,7 +60,7 @@
  |язык сайта              = 
 }}
 {{Лия смустьтне|Потма (смустьтне)}}
-'''Потманя'''  ({{Lang-ru|с. Тарханская Потьма}}) — [[мокшот|мокшонь]]<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/h_Tarhanskaya_Potma.htm Многоликая Мордовия: Село Тарханская Потьма] {{Ref-ru}}</ref> посёлка [[Пейкужо буе]]сэ, [[Мордовия]]со.
+'''Потманя'''  ({{Lang-ru|с. Тарханская Потьма}}) — [[мокшот|мокшонь]]<ref name="РГО_с. Тарханская Потьма">[http://geo13.ru/reestr/object/559 Геопортал РГО в Республике Мордовия: с. Тарханская Потьма] {{Ref-ru}}</ref> посёлка [[Пейкужо буе]]сэ, [[Мордовия]]со.
 
 Лецтяви ({{Lang-ru|Списке населенных мест Тамбовской губернии}}) ([[1866 ие]]) ''Тарханская Потьма  — 133<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref> кудот марто Спассонь уездсэ''. 
 
@@ -70,12 +70,12 @@
 == Содавикс ломанть те велестэнть ==
 * М.Н. Шишкарёв— генерал-майора
 * А.Г. Самошкин —  фольклоронь пурныця 
-* С.А. Самошкин — сёрмадей 
+* [[Самошкин Семен Аверьянович|Семён Самошкин]]<ref name="Библиотека_Самошкин">[http://www.lib.e-mordovia.ru/Library/?Char=%D1&id=2  Библиотека Мордовской литературы. Самошкин Семен Аверьянович] {{ref-ru}}</ref> — сёрмадей, ютавтыця 
 * А.А. Андреев — орденоносец 
 * Р.С. Коноплёвой — микшниця 
 
 == Веленть эрямозо  ==
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
