*Empty MediaWiki Message*

--- a/Кобале_(Тумобуе).mw
+++ b/Кобале_(Тумобуе).mw
@@ -68,12 +68,14 @@
 
 == Содавикс ломанть те велестэнть ==
 Кобалесэ чачсть:
-* Дёшкин Петр Иванович<ref>[http://librarun.org/book/49442/87 Аграрная Россия: история, проблемы, перспективы: Монография {{Ref-ru}}]]</ref>— раськень ёроков ломань, ламо мезень теиця 
-* А.И. Орлов<ref>[http://www.kulyat.info/novaya-zhizn-dubenki/41_dubenki/11083-chtim-pomnim-gordimsya.html Чтим, помним, гордимся {{Ref-ru}}]]</ref>— Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}) 
-* [[Зорькин, Леонид Матвеевич|Леонид Зорькин]]<ref>[http://www.polkmoskva.ru/people/702410/Бесмертный полк: Зорькин Леонид Матвеевич {{Ref-ru}}]]</ref>— учёной-геолог, Ине Отечественной ойнань улиця  
-* Е.Г. Бояркина и М. Е. Куманёва — тонавтыцят
 * П.В. Агеев<ref>[http://kafioo.edurm.ru/index.php?option=com_content&view=article&id=152:2011-04-15-05-08-18&catid=2:2009-10-01-04-33-23&Itemid=2 Малясов С.Н.	 Наши генералы {{Ref-ru}}]]</ref>— генерал-лейтенант 
+* Е.Г. Бояркина  — тонавтыцят
+* Дёшкин Петр Иванович<ref>[http://librarun.org/book/49442/87 Аграрная Россия: история, проблемы, перспективы: Монография {{Ref-ru}}]]</ref>— раськень ёроков ломань, ламо мезень теиця 
+* [[Зорькин, Леонид Матвеевич|Леонид Зорькин]]<ref>[http://www.polkmoskva.ru/people/702410/Бесмертный полк: Зорькин Леонид Матвеевич {{Ref-ru}}]]</ref>— учёной-геолог, Ине Отечественной ойнань улиця  
+* М. Е. Куманёва — тонавтыцят
+* А.И. Орлов<ref>[http://www.kulyat.info/novaya-zhizn-dubenki/41_dubenki/11083-chtim-pomnim-gordimsya.html Чтим, помним, гордимся {{Ref-ru}}]]</ref>— Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}) 
 * [[Подгорновонь Алина|А. Подгорнова]] — валморозей
+* [[Седойкин, Леонид Павлович|Леонид Седойкин]]<ref name="Библиотека_Седойкин">[http://www.lib.e-mordovia.ru/Library/?Char=%D1&id=4  Библиотека Мордовской литературы. Седойкин Леонид Павлович] {{ref-ru}}</ref> — сёрмадей, валморозей
 
 Вишка шканзо Кобалесэ ютавтызе содавикс эрзянь валморозеесь [[Араповонь Саша]].
 
