*Empty MediaWiki Message*

--- a/Ало_(смустьтне).mw
+++ b/Ало_(смустьтне).mw
@@ -6,7 +6,7 @@
 * [[Ало куро (Лугаян буе)]] — веле [[Лугаян буе]]сэ, [[Алоошонь ёнкс]]со.
 * [[Алоошонь ёнкс]] — ёнкс Россиясо.
 * [[Алоош]] — ош, [[Алоошонь ёнкс]]онь прявтош. 
-
+* [[Алово (Никольской буе)|Алово]] — эрзянь веле [[Никольской буе (Пенза ёнкс)|Никольской буе]] [[Пенза ёнкс]]о.
 
 __DISAMBIG__
 
