([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Marine corps flag.gif]] → [[File:Flag of the United States Marine Corps.gif]]

--- a/ЛопаПарцун:Масторкоцт%2FАмерикань_Вейтьсэндявкс_Штаттнэ.mw
+++ b/ЛопаПарцун:Масторкоцт%2FАмерикань_Вейтьсэндявкс_Штаттнэ.mw
@@ -33,7 +33,7 @@
 | flag alias-армия = Army flag.gif
 | flag alias-береговой = Ensign of the United States Coast Guard.svg
 | flag alias-береговой-парадный = USCG Parade Flag.svg
-| flag alias-морпех = Marine corps flag.gif
+| flag alias-морпех = Flag of the United States Marine Corps.gif
 | flag alias-ВВС = Flag of the United States Air Force.png
 | flag alias-ВМС = Naval Jack of the United States.svg
 | flag alias-ВМС-2 = US Naval Jack.svg
