--- a/Алово_(Никольской_буе).mw
+++ b/Алово_(Никольской_буе).mw
@@ -12,8 +12,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 53.560706|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 46.148307|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
